--- a/RepositoryServices/RepositoryServices.csproj
+++ b/RepositoryServices/RepositoryServices.csproj
@@ -53,10 +53,12 @@
   <ItemGroup>
     <Compile Include="Core\IGenericRepository.cs" />
     <Compile Include="Core\IRepositories\IColorFormulaRepository.cs" />
+    <Compile Include="Core\IRepositories\IImageFormulaRepository.cs" />
     <Compile Include="Core\IRepositories\ICustomerRepository.cs" />
     <Compile Include="Core\IRepositories\IProductRepository.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Persistance\GenericRepository.cs" />
+    <Compile Include="Persistance\Repositories\ImageFormulaRepository.cs" />
     <Compile Include="Persistance\Repositories\ColorFormulaRepository.cs" />
     <Compile Include="Persistance\Repositories\CustomerRepository.cs" />
     <Compile Include="Persistance\Repositories\ProductRepository.cs" />
