--- a/TestWebApp/TestWebApp.csproj
+++ b/TestWebApp/TestWebApp.csproj
@@ -196,6 +196,7 @@
     <Compile Include="ChatHub.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ApiControllers\ColorFormulaController.cs" />
+    <Compile Include="Controllers\ApiControllers\CustomerController.cs" />
     <Compile Include="Controllers\ApiControllers\ImageFormulaController.cs" />
     <Compile Include="Controllers\ApiControllers\ProductController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
