--- a/Experiments/Experiments.csproj
+++ b/Experiments/Experiments.csproj
@@ -74,6 +74,9 @@
       <Name>RepositoryServices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Photos\dragonball.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
