--- a/TestWebApp/TestWebApp.csproj
+++ b/TestWebApp/TestWebApp.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Controllers\ApiControllers\ImageFormulaController.cs" />
     <Compile Include="Controllers\ApiControllers\PhotoController.cs" />
     <Compile Include="Controllers\ApiControllers\ProductController.cs" />
+    <Compile Include="Controllers\ApiControllers\ShopProductController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
