--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Models\ImageFormula.cs" />
     <Compile Include="Models\Photo.cs" />
     <Compile Include="Models\Product.cs" />
+    <Compile Include="Models\Order.cs" />
     <Compile Include="Models\ShopProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
