--- a/RepositoryServices/RepositoryServices.csproj
+++ b/RepositoryServices/RepositoryServices.csproj
@@ -57,9 +57,11 @@
     <Compile Include="Core\IRepositories\ICustomerRepository.cs" />
     <Compile Include="Core\IRepositories\IPhotoRepository.cs" />
     <Compile Include="Core\IRepositories\IProductRepository.cs" />
+    <Compile Include="Core\IRepositories\IOrderRepository.cs" />
     <Compile Include="Core\IRepositories\IShopProductRepository.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Persistance\GenericRepository.cs" />
+    <Compile Include="Persistance\Repositories\OrderRepository.cs" />
     <Compile Include="Persistance\Repositories\ImageFormulaRepository.cs" />
     <Compile Include="Persistance\Repositories\ColorFormulaRepository.cs" />
     <Compile Include="Persistance\Repositories\CustomerRepository.cs" />
