--- a/Entities/Entities.csproj
+++ b/Entities/Entities.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\Order.cs" />
     <Compile Include="Models\ShopProduct.cs" />
+    <Compile Include="Models\WarehouseProduct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
