--- a/TestWebApp/TestWebApp.csproj
+++ b/TestWebApp/TestWebApp.csproj
@@ -202,6 +202,7 @@
     <Compile Include="Controllers\ApiControllers\PhotoController.cs" />
     <Compile Include="Controllers\ApiControllers\ProductController.cs" />
     <Compile Include="Controllers\ApiControllers\ShopProductController.cs" />
+    <Compile Include="Controllers\ApiControllers\WarehouseProductController.cs" />
     <Compile Include="Controllers\ContactController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
